# dspy-data-module

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/dspy-data/: builder.py  wrapper.py
src/dspy_data/: __init__.py  builder.py  cli.py  collect.py  dry_run_lm.py  loader.py  rewards.py  sft.py  wrapper.py
tests/: test_loader.py  test_rewards.py  test_wrapper.py
