[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dspy-data"
version = "0.1.0"
description = "Automated data collection using dspy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dspy-ai>=3.0.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 104
extend-exclude = []

[tool.ruff.lint]
select = ["E", "F", "W", "B", "UP", "I", "N", "SIM", "C4", "ARG"]

ignore = [
  "ARG001",
  "E203",
  "E266",
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["dspy_data"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
